--- a/ui/edit.ui
+++ b/ui/edit.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>edit</class>
+ <widget class="QWidget" name="edit">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -21,9 +21,9 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>150</x>
      <y>10</y>
-     <width>141</width>
+     <width>201</width>
      <height>41</height>
     </rect>
    </property>
@@ -33,10 +33,10 @@
     </font>
    </property>
    <property name="text">
-    <string>เพิ่มเมนูกาแฟ</string>
+    <string>แก้ไขหรือลบเมนูกาแฟ</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="AddpushButton">
+  <widget class="QPushButton" name="editButton">
    <property name="geometry">
     <rect>
      <x>150</x>
@@ -48,31 +48,16 @@
    <property name="font">
     <font>
      <pointsize>20</pointsize>
-     <weight>50</weight>
-     <italic>false</italic>
-     <bold>false</bold>
     </font>
    </property>
-   <property name="focusPolicy">
-    <enum>Qt::NoFocus</enum>
-   </property>
-   <property name="acceptDrops">
-    <bool>false</bool>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
-    <string>ตกลง</string>
+    <string>แก้ไข</string>
    </property>
-   <property name="shortcut">
-    <string/>
-   </property>
-   <property name="autoDefault">
-    <bool>false</bool>
-   </property>
-   <property name="default">
-    <bool>false</bool>
-   </property>
-   <property name="flat">
-    <bool>false</bool>
+   <property name="checkable">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -133,7 +118,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>220</y>
+     <y>230</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -147,7 +132,7 @@
     <string>ราคา</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="AddpushButton_2">
+  <widget class="QPushButton" name="cancleButton">
    <property name="geometry">
     <rect>
      <x>260</x>
@@ -161,16 +146,79 @@
      <pointsize>20</pointsize>
     </font>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="text">
     <string>ยกเลิก</string>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="FecthButton">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>60</y>
+     <width>71</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>ค้นหา</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="deletedataButton">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>320</y>
+     <width>201</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>RSU</family>
+     <pointsize>20</pointsize>
+    </font>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::StrongFocus</enum>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 0, 0);
+color: rgb(255, 255, 255);
+border-radius: 7px;
+border: 1px solid #D5D8DC;</string>
+   </property>
+   <property name="text">
+    <string>ลบข้อมูลทั้งหมด</string>
+   </property>
+   <property name="checkable">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="idcoffeetext">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>140</x>
      <y>60</y>
-     <width>131</width>
+     <width>101</width>
      <height>41</height>
     </rect>
    </property>
@@ -183,9 +231,9 @@
   <widget class="QLineEdit" name="menucoffeetext">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>140</x>
      <y>110</y>
-     <width>271</width>
+     <width>221</width>
      <height>41</height>
     </rect>
    </property>
@@ -198,10 +246,10 @@
   <widget class="QLineEdit" name="descriptiontext">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>140</x>
      <y>160</y>
-     <width>271</width>
-     <height>41</height>
+     <width>221</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
@@ -213,9 +261,9 @@
   <widget class="QLineEdit" name="pricetext">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>210</y>
-     <width>131</width>
+     <x>140</x>
+     <y>220</y>
+     <width>111</width>
      <height>41</height>
     </rect>
    </property>
