--- a/ui/main.ui
+++ b/ui/main.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Coffee Shop</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTableWidget" name="menutableWidget">
