fix buttons, add a refresh button function, add icon, fixed display

--- a/image/image.qrc
+++ b/image/image.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="image">
+    <file>icon.png</file>
     <file>123.jpg</file>
     <file>derevo-coffee-kofe.jpg</file>
     <file>minus.png</file>
