--- a/ui/login.ui
+++ b/ui/login.ui
@@ -98,8 +98,8 @@ backgroud-color: rgb(43, 45, 56);
   <widget class="QPushButton" name="loginbutton">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>340</y>
+     <x>200</x>
+     <y>320</y>
      <width>141</width>
      <height>51</height>
     </rect>
@@ -156,6 +156,42 @@ QPushButton:hover:pressed
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="SignUpbutton">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>390</y>
+     <width>141</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>RSU</family>
+     <pointsize>20</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+	border: 2px solid rgb(37,39,48);
+	border-radius: 20px;
+	color: #FFF;
+	padding-left: 20px;
+	padding-right: 20px;
+	backgroud-color: rgb(27, 29, 35);
+}
+QPushButton:hover {
+	border: 2px solid rgb(48, 50, 62);
+}
+QPushButton:hover:pressed
+{
+  border: 2px solid rgb(255, 73, 73);
+}</string>
+   </property>
+   <property name="text">
+    <string>Sign Up</string>
    </property>
   </widget>
  </widget>
