edit login page, edit windows icon, fix password shows

--- a/image/image.qrc
+++ b/image/image.qrc
@@ -1,6 +1,7 @@
 <RCC>
   <qresource prefix="image">
     <file>icon.png</file>
+    <file>46513136054_e29230f97c_b.jpg</file>
     <file>123.jpg</file>
     <file>derevo-coffee-kofe.jpg</file>
     <file>minus.png</file>
